worked on nav-bar not collapsing in portfolio and contact in mobile, still no fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,32 @@
-body {
-    font-family: Montserrat, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-#i {
- color: black;
-}
+/*--------------------------------------------Colors */
 
-.photo-gallery {
-    clear: both;
-    line-height: 0;
-    column-count: 4;
-    column-gap: 5px;
-    
-}
+/*--------------------------------------------Special paddings/margins/text */
 
-.photo-gallery img{
-    width: 100%;
-}
+
+/*--------------------------------------------Heading*/
+
+
+/*--------------------------------------------Hover.css*/
+
+
+/*--------------------------------------------Shoutout*/
+
+
+/* -------------------------------------------Portfolio */
+
+
+/*--------------------------------------------Cards */
+
+
+/*--------------------------------------------Contact */
+
+
+/*--------------------------------------------Form */
+
+
+/*--------------------------------------------Media Queries */
+
+@media(min-width: 992px) {
+    }
